// Code generated by sgen.exe,2022-05-18 09:13:09. DO NOT EDIT.
// versions: v1.0.0
// 如果确实需要修改,请修改后改文件名,可以移除文件名中的.gen,以防下次生成覆盖

syntax = "proto3";

package service;
option go_package = ".;protosService";
import "google/protobuf/timestamp.proto";

//来源于数据表
message SceneIntelligenceLog {


    // @inject_tag: json:"id" gorm:"default:唯一主键;comment:唯一主键;size:19;"
    int64 id = 100;


    // @inject_tag: json:"objectId" gorm:"default:;comment:;size:19;"
    int64 objectId = 101;


    // @inject_tag: json:"homeId" gorm:"default:;comment:;size:19;"
    int64 homeId = 102;


    // @inject_tag: json:"userId" gorm:"default:;comment:;size:19;"
    int64 userId = 103;


    // @inject_tag: json:"content" gorm:"default:;comment:;size:200;"
    string content = 104;


    // @inject_tag: json:"resultId" gorm:"default:执行结果编号（t_scene_intelligence_result.id）;comment:执行结果编号（t_scene_intelligence_result.id）;size:10;"
    int32 resultId = 105;


    // @inject_tag: json:"isSuccess" gorm:"default:是否执行成功;comment:是否执行成功;size:10;"
    int32 isSuccess = 106;


    // @inject_tag: json:"sceneType" gorm:"default:=1 一键执行 =2 自动场景;comment:=1 一键执行 =2 自动场景;size:10;"
    int32 sceneType = 107;


    // @inject_tag: json:"createdAt" gorm:"default:创建时间;comment:创建时间;"
    google.protobuf.Timestamp createdAt = 108; 

}

message SceneIntelligenceLogFilter {


    // @inject_tag: json:"id" gorm:"default:唯一主键;comment:唯一主键;size:19;"
    int64 id = 100;


    // @inject_tag: json:"objectId" gorm:"default:;comment:;size:19;"
    int64 objectId = 101;


    // @inject_tag: json:"homeId" gorm:"default:;comment:;size:19;"
    int64 homeId = 102;


    // @inject_tag: json:"userId" gorm:"default:;comment:;size:19;"
    int64 userId = 103;


    // @inject_tag: json:"content" gorm:"default:;comment:;size:200;"
    string content = 104;


    // @inject_tag: json:"resultId" gorm:"default:执行结果编号（t_scene_intelligence_result.id）;comment:执行结果编号（t_scene_intelligence_result.id）;size:10;"
    int32 resultId = 105;


    // @inject_tag: json:"isSuccess" gorm:"default:是否执行成功;comment:是否执行成功;size:10;"
    int32 isSuccess = 106;


    // @inject_tag: json:"sceneType" gorm:"default:=1 一键执行 =2 自动场景;comment:=1 一键执行 =2 自动场景;size:10;"
    int32 sceneType = 107;


    // @inject_tag: json:"createdAt" gorm:"default:创建时间;comment:创建时间;"
    google.protobuf.Timestamp createdAt = 108; 

}

message SceneIntelligenceLogListRequest {
    SceneIntelligenceLog query = 101;
    int64 page = 102;
    int64 pageSize = 103;
    string orderKey = 104;
    string orderDesc = 105;
    string searchKey = 106;
}

message SceneIntelligenceLogResponse {
    int32 code = 101;
    string message = 102;
    int64 total = 103;
    repeated SceneIntelligenceLog data = 104;
}

message SceneIntelligenceLogUpdateFieldsRequest {
    repeated string fields = 101;
    SceneIntelligenceLog data = 102;
}


// 表模型主键，只能是整数或字符串，若生成错误，请检查数据库表主键是否正确。支持组合主键
message SceneIntelligenceLogPrimarykey {

    int64 id = 100;
}

message SceneIntelligenceLogBatchDeleteRequest {
    repeated SceneIntelligenceLogPrimarykey keys = 101;
}